--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Extract Version
       id: extract_version
       run: >
-        version_number=$(awk -v RS='\n' '/<Version>/,/<\/Version>/{if(!/<Version>|<\/Version>/) print}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//' -e '/^$/d')
+        version_number=$(awk -v RS='' -F'</?Version>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
 
         echo "$version_number"
 
@@ -50,7 +50,7 @@ jobs:
     - name: Extract Package Release Notes
       id: extract_package_release_notes
       run: >
-        package_release_notes=$(awk -v RS='\n' '/<PackageReleaseNotes>/,/<\/PackageReleaseNotes>/{if(!/<PackageReleaseNotes>|<\/PackageReleaseNotes>/) print}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//' -e '/^$/d')
+        package_release_notes=$(awk -v RS='' -F'</?PackageReleaseNotes>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
 
         echo "$package_release_notes"
 
@@ -99,7 +99,7 @@ jobs:
     - name: Extract Version
       id: extract_version
       run: >
-        version_number=$(awk -v RS='\n' '/<Version>/,/<\/Version>/{if(!/<Version>|<\/Version>/) print}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//' -e '/^$/d')
+        version_number=$(awk -v RS='' -F'</?Version>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
 
         echo "$version_number"
 
@@ -114,7 +114,7 @@ jobs:
     - name: Extract Package Release Notes
       id: extract_package_release_notes
       run: >
-        package_release_notes=$(awk -v RS='\n' '/<PackageReleaseNotes>/,/<\/PackageReleaseNotes>/{if(!/<PackageReleaseNotes>|<\/PackageReleaseNotes>/) print}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//' -e '/^$/d')
+        package_release_notes=$(awk -v RS='' -F'</?PackageReleaseNotes>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
 
         echo "$package_release_notes"
 
