--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,23 @@ jobs:
     - name: Extract Version
       id: extract_version
       run: >
-        version_number=$(awk -v RS='' -F'</?Version>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
+        if [[ "$OSTYPE" == "msys" || "$OSTYPE" == "cygwin" ]]; then 
+
+        # Running on Windows 
+
+        apt install xmlstarlet
+
+        version_number=$(xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        else 
+
+        # Running on Linux/Unix
+
+        apt-get install xmlstarlet
+
+        version_number=$(xmlstarlet sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        fi 
 
         echo "$version_number"
 
@@ -50,7 +66,23 @@ jobs:
     - name: Extract Package Release Notes
       id: extract_package_release_notes
       run: >
-        package_release_notes=$(awk -v RS='' -F'</?PackageReleaseNotes>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
+        if [[ "$OSTYPE" == "msys" || "$OSTYPE" == "cygwin" ]]; then 
+
+        # Running on Windows 
+
+        apt install xmlstarlet
+
+        package_release_notes=$(xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        else 
+
+        # Running on Linux/Unix
+
+        apt-get install xmlstarlet
+
+        package_release_notes=$(xmlstarlet sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        fi 
 
         echo "$package_release_notes"
 
@@ -99,7 +131,23 @@ jobs:
     - name: Extract Version
       id: extract_version
       run: >
-        version_number=$(awk -v RS='' -F'</?Version>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
+        if [[ "$OSTYPE" == "msys" || "$OSTYPE" == "cygwin" ]]; then 
+
+        # Running on Windows 
+
+        apt install xmlstarlet
+
+        version_number=$(xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        else 
+
+        # Running on Linux/Unix
+
+        apt-get install xmlstarlet
+
+        version_number=$(xmlstarlet sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        fi 
 
         echo "$version_number"
 
@@ -114,7 +162,23 @@ jobs:
     - name: Extract Package Release Notes
       id: extract_package_release_notes
       run: >
-        package_release_notes=$(awk -v RS='' -F'</?PackageReleaseNotes>' 'NF>1{print $2}' GithubActionExpressionTesting/GithubActionExpressionTesting.csproj | sed -e 's/^[[:space:]]*//')
+        if [[ "$OSTYPE" == "msys" || "$OSTYPE" == "cygwin" ]]; then 
+
+        # Running on Windows 
+
+        apt install xmlstarlet
+
+        package_release_notes=$(xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        else 
+
+        # Running on Linux/Unix
+
+        apt-get install xmlstarlet
+
+        package_release_notes=$(xmlstarlet sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+
+        fi 
 
         echo "$package_release_notes"
 
