--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -44,7 +44,7 @@ jobs:
 
         # Running on Windows 
 
-        apt install xmlstarlet
+        choco install xmlstarlet
 
         version_number=$(xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
@@ -75,7 +75,7 @@ jobs:
 
         # Running on Windows 
 
-        apt install xmlstarlet
+        choco install xmlstarlet
 
         package_release_notes=$(xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
