CODE RUB: Updated build scripts

--- a/GithubActionExpressionTesting.Infrastructure.Tests/GithubActionExpressionTesting.Infrastructure.Tests.csproj
+++ b/GithubActionExpressionTesting.Infrastructure.Tests/GithubActionExpressionTesting.Infrastructure.Tests.csproj
@@ -4,8 +4,9 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
+		<IsPackable>false</IsPackable>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
