--- a/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
+++ b/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
@@ -5,17 +5,26 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<IsPackable>false</IsPackable>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ADotNet" Version="3.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="../.github/workflows/dotnet.yml">
+		<None Include="../.github/workflows/build.yml">
+			<Pack>false</Pack>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</None>
+		<None Include="../.github/workflows/build-windows.yml">
+			<Pack>false</Pack>
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</None>
+		<None Include="../.github/workflows/build-ubuntu.yml">
 			<Pack>false</Pack>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</None>
@@ -27,6 +36,10 @@
 			<Pack>false</Pack>
 			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\ADotNet\ADotNet\ADotNet.csproj" />
 	</ItemGroup>
 
 </Project>
