--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -39,9 +39,9 @@ jobs:
 
         # Running on Windows 
 
-        choco install xmlstarlet
+        sudo apt install xmlstarlet
 
-        version_number=$(xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+        version_number=$(wsl xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
         else 
 
@@ -70,9 +70,9 @@ jobs:
 
         # Running on Windows 
 
-        choco install xmlstarlet
+        sudo apt install xmlstarlet
 
-        package_release_notes=$(xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+        package_release_notes=$(wsl xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
         else 
 
