--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -44,9 +44,9 @@ jobs:
 
         # Running on Windows 
 
-        choco install xmlstarlet.portable -y
+        curl -LO https://github.com/movitto/xmlstarlet-win/raw/main/xml.exe
 
-        version_number=$(xml sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
+        version_number=$(./xml.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
         else 
 
