--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,6 +41,8 @@ jobs:
 
         curl -LO https://github.com/mikefarah/yq/releases/download/3.4.1/yq_windows_amd64.exe -o xmlstarlet.exe
 
+        chmod +x xmlstarlet.exe
+
         version_number=$(./xmlstarlet.exe sel -t -v "//Version" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
         else 
@@ -71,6 +73,8 @@ jobs:
         # Running on Windows 
 
         curl -LO https://github.com/mikefarah/yq/releases/download/3.4.1/yq_windows_amd64.exe -o xmlstarlet.exe
+
+        chmod +x xmlstarlet.exe
 
         package_release_notes=$(./xmlstarlet.exe sel -t -v "//PackageReleaseNotes" -n GithubActionExpressionTesting/GithubActionExpressionTesting.csproj)
 
