--- a/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
+++ b/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
@@ -39,4 +39,8 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\ADotNet\ADotNet\ADotNet.csproj" />
+	</ItemGroup>
+
 </Project>
